# r2live_faster_lio

config/: filr_m2dgr_cam.yaml  lio_config.yaml  lio_m2dgr_config.yaml  r2live.yaml  velodyne.yaml
config/rviz/: vins_rviz_config.rviz  voxel_mapping.rviz
feature_tracker/src/: feature_tracker_node.cpp
r2live/: CMakeLists.txt
r2live/apps/: lio_feature_extract_node.cc  r2live_node.cc  r2live_node.cpp
r2live/cmake/: OpenCV.cmake  OpenMP.cmake  ceres.cmake  glog.cmake  tbb.cmake
r2live/include/factor/: imu_factor.h  integration_base.h  lidar_prior.hpp  pose_local_parameterization.h  projection_factor.h  projection_td_factor.h
r2live/include/fast_lio/: common_lib.h  fast_lio.h  feature_extract.h  imu_process.h  lio_core.h  parameter_server.h  pointcloud_ikd_map.h  pointcloud_ivox_map.h  pointcloud_map_base.h  pointcloud_voxel_map.h
r2live/include/fast_lio/ivox3d/: eigen_types.h  ivox3d.h  ivox3d_node.hpp
r2live/include/fast_lio/voxel_map/: voxel_map.cc  voxel_map.h
r2live/include/initial/: initial_alignment.h  initial_ex_rotation.h
r2live/include/r2live/: common_lib.h  parameter_server.h  r2live.h  so3_math.h
r2live/include/utility/: timer.h  visualization.h
r2live/include/vins/: LM_Strategy.hpp  estimator.h  vio_marginalization.hpp
r2live/launch/: demo.launch  m2dgr.launch  m2dgr_veloyden.launch  test.launch
r2live/src/: estimator.h  estimator_node.cpp
r2live/src/apps/: estimator_node.cpp  lio_feature_extract_node.cc  voxel_map_node.cc
r2live/src/factor/: imu_factor.h  integration_base.h  lidar_prior.hpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
r2live/src/fast_lio/: fast_lio.cc  fast_lio.hpp  feature_extract.cc  feature_extract.cpp  imu_process.cc  laserMapping.cpp  lio_core.cc  parameter_server.cc  pointcloud_ikd_map.cc  pointcloud_ivox_map.cc  pointcloud_voxel_map.cc
r2live/src/fast_lio/include/: common_lib.h  fast_lio.h  feature_extract.h  imu_process.h  imu_processing.h  lio_core.h  parameter_server.h  pointcloud_ikd_map.h  pointcloud_ivox_map.h  pointcloud_map.h  pointcloud_map_base.h  preprocess.h  voxel_map_util.h  voxel_mapping.h
r2live/src/fast_lio/include/ivox3d/: eigen_types.h  ivox3d.h  ivox3d_node.hpp
r2live/src/fast_lio/src/: fast_lio.cc  feature_extract.cc  imu_process.cc  imu_processing.cc  lio_core.cc  parameter_server.cc  pointcloud_ikd_map.cc  pointcloud_ivox_map.cc  pointcloud_map.cc  preprocess.cc  voxel_map_util.cc  voxel_mapping.cc
r2live/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.h
r2live/src/r2live/: parameter_server.cc  r2live.cc
r2live/src/utility/: CameraPoseVisualization.cpp  visualization.cpp  visualization.h
r2live/src/vins/: estimator.cpp  estimator_optimization.cpp  feature_manager.cpp  parameters.cpp
r2live/src/vins/include/: estimator.h  parameters.h
r2live/src/vins/src/: estimator.cpp  estimator_optimization.cpp  feature_manager.cpp  parameters.cpp
test/: test_app.cc
